# wayward

./: .pre-commit-config.yaml  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
src/wayward/: config.py  main.py  ocr_image.py  promote.py  quarantine.py  rename_picure_from_contents.py
